Commented out a missing image file.
git-svn-id: svn://svn.newznab.com/nn/trunk@781 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -180,7 +180,7 @@ div.icon_check			{ background-image:url('images/icons/check.png'); }
     #cboxMiddleRight{width:25px; background:url(images/colorbox/border2.png) -25px 0 repeat-y;}
     #cboxContent{background:#fff;}
         #cboxLoadedContent{background:#fff; margin-top:32px; padding:1px; }
-        #cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}
+        /*#cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}*/
         #cboxLoadingOverlay{background:#fff;}
         #cboxTitle{position:absolute; font-size:125%; top:-2px; left:0; color:#000; }
         #cboxCurrent{position:absolute; top:-1px; right:205px; text-indent:-9999px;}
