--- a/www/views/styles/admin.css
+++ b/www/views/styles/admin.css
@@ -7,6 +7,7 @@ legend { padding: 0.4em 0.6em; border:1px solid #999; font-weight:bold; text-ali
 #adpanel { display:none; }
 #content { width: 720px; }
 #sidebar { width: 200px; }
+#sidebar li li:hover { cursor:auto; }
 #logo { width: 0; height: 0; margin: 0 auto; padding-left:0; margin-top:0; }
 .footer { width: 100%; height: 100px; margin: 0 auto; background: #FFF; border-top: 0; }
 #menu { height:0px; }
