--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -76,7 +76,7 @@ select#headcat option.grouping { padding-left: 5px; font-weight: bold; }
 #sidebar li { margin-bottom: 30px; padding: 0 0 0px 0px;}
 #sidebar li ul { list-style-type: none;  list-style-position:inside; margin: 0px 10px; padding: 0; margin-left: 1em;}
 #sidebar li li { background-image: url('../images/bullet.jpg'); background-repeat: no-repeat; background-position: 0.7em 1.1em; margin: 0;	padding-left: .5em; padding-top: .8em;padding-bottom:10px; border-bottom: 1px solid #E9E8DD;}
-#sidebar li li a {padding: 5px 5px 5px 20px; font-weight: normal; color: #808080;}
+#sidebar li li a {padding: 0 0 0 20px; font-weight: normal; color: #808080;}
 #sidebar li li a:hover {color: #4D9408;}
 #sidebar li li:hover { cursor:pointer; background-color:#EEE; background-image: url('../images/bullet_hov.jpg');}
 
