--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -73,7 +73,7 @@ select#headcat option.grouping { padding-left: 5px; font-weight: bold; }
 
 #sidebar { float: left; width: 160px; font-size: 12px;}
 #sidebar ul {margin: 0; padding: 0; line-height: normal; list-style-type: none; text-align: left; }
-#sidebar li { margin-bottom: 30px; padding: 0 0 0px 0px;}
+#sidebar li { margin-bottom: 30px; padding: 0 0 0 0;}
 #sidebar li ul { list-style-type: none;  list-style-position:inside; margin: 0px 10px; padding: 0; margin-left: 1em;}
 #sidebar li li { background-image: url('../images/bullet.jpg'); background-repeat: no-repeat; background-position: 0.7em 1.1em; margin: 0;	padding-left: .5em; padding-top: .8em;padding-bottom:10px; border-bottom: 1px solid #E9E8DD;}
 #sidebar li li a {padding: 0 0 0 20px; font-weight: normal; color: #808080;}
