--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -11,7 +11,7 @@ body { background:none; color: #333; }
 
 /* override table styles, alt rows, headings etc*/
 table tr.alt { background-color: #eee; }
-table tr.new { background-color: #004703; }
+table tr.new { background-color: #ddd; }
 table.highlight tr:hover td { background-color: #efefef; }
 table.data th { background-color:#fff; border-color: #ddd;}
 table.data td, table.data { border-color: #ddd;}
