--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -18,7 +18,7 @@ table.data td, table.data { border-color: #ddd;}
 
 
 /* override almost every element in the sites font and color*/
-#sidebar li li a:hover, h3, h2, table.data, #statusbar, #statusbar a, div.comments , #menulink a, #menulink :visited, #menulink a , #sidebar h2, #sidebar li li a, li, #content h1, p, #menulink a.selected, #menulink a, #statusbar, #statusbar a, th, td, a, select, textarea, input {font-family:Calibri, courier, monospace; color:#444;}
+#sidebar li, h3, h2, table.data, #statusbar, #statusbar a, div.comments , #menulink a, #menulink :visited, #menulink a , #sidebar h2, #sidebar li li a, li, #content h1, p, #menulink a.selected, #menulink a, #statusbar, #statusbar a, th, td, a, select, textarea, input {font-family:Calibri, courier, monospace; color:#444;}
 #sidebar li li, #sidebar li li:hover { background:none;}
 #sidebar li li a {padding: 0 0 0 0;}
 #sidebar a:hover { text-decoration: underline;}
@@ -30,7 +30,9 @@ select { background: none; }
 
 /* menu bar background colours*/
 #menulink a, #menulink :visited, #menulink li, #menu { background-color:#fff;}
-#menulink :hover, #menulink a.selected { color: #fff; background-color: #333; }
+#menulink :hover { color: #fff; background-color: #333; }
+
+a:hover, #sidebar li li a:hover {color:#000;}
 
 
 #cboxLoadedContent{ background:#333; }
