--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -1,10 +1,4 @@
 
-/* example site specific theme*/
-
-/* make all main site containers black baground and remove the fader image at the top*/
-
-/* remove the w3 validator, change logo, and hide h1 text*/
-
 body { background:none; color: #333; }
 .footer, .w3validator, .menupic {display:none;}
 #logo { visibility:none; height:35px; background:none;}
@@ -31,6 +25,9 @@ select { background: none; }
 /* menu bar background colours*/
 #menulink a, #menulink :visited, #menulink li, #menu { background-color:#fff;}
 #menulink :hover { color: #fff; background-color: #333; }
+
+
+select#headcat {width:100px;}
 
 a:hover, #sidebar li li a:hover {color:#000;}
 
