--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -1,9 +1,10 @@
 /*
 site wide html styles
 */
-body { margin: 0; padding: 0; background: #FFF url(../images/menu.gif) repeat-x left top; font-family: Arial, Helvetica, sans-serif;	font-size: 12px; color: #515151; }
+body { margin: 0; padding: 0; background: #FFF url(../images/menu.gif) repeat-x left top; font-family: Calibri, Arial, Helvetica, sans-serif;	font-size: 12px; color: #515151; }
 h1, h2, h3 {	margin: 0;	font-weight: normal; color: #485459; }
-textarea { font-family: Arial, Helvetica, sans-serif; height:100px; width:300px;}
+input, select, textarea { font-family: Calibri, Arial, Helvetica, sans-serif;}
+textarea { height:100px; width:300px;}
 h1 { font-size: 44px; padding-bottom:10px;}
 h2 { padding-bottom:5px; font-size: 18px; }
 h3 { padding-top:10px;padding-bottom:5px;}
@@ -27,12 +28,12 @@ page structure
 #header { width: 940px; 	margin: 0 auto; }
 #page { width: 940px; margin: 0 auto; padding: 50px 0px 0px 0px;}
 
-#logo { width: 940px; height: 67px; margin: 0 auto; padding-left:5px; margin-top:4px; background:url("../images/banner.jpg") no-repeat bottom left; }
+#logo { width: 940px; height: 47px; margin: 0 auto; padding-left:5px; margin-top:4px; background:url("../images/banner.jpg") no-repeat bottom left; }
 #logo h1, #logo p { display:none; margin: 0px; line-height: normal; text-transform: lowercase; font-weight: normal; color: #485459;}
 #logo p { margin-top: 2px; text-transform: lowercase; font-size: 13px; color: #A8A8A8;}
 #logo h1 { padding-top: 10px; font-size: 48px;}
 #logo a { text-decoration: none; color: #A8A8A8; }
-#logo img { margin-top:15px; }
+#logo img { margxin-top:15px; }
 #logo h1 a { text-decoration: none; color: #485459;}
 
 #statusbar { width:940px; margin: 0 auto; text-align:right; padding-right:10px; padding-top:5px;}
