--- a/www/views/themes/nzbsu/style.css
+++ b/www/views/themes/nzbsu/style.css
@@ -24,6 +24,7 @@ input[type=text], input[type=password], textarea, select { background: #fff; }
 #menulink a, #menulink :visited, #menulink li, #menu {color:#fff;  background-color:#333;}
 #menulink :hover { color: #fff; background-color: #555; }
 
+#logo { height: 67px; }
 #logo ul ul {list-style-image: url('images/menubullet.jpg');}
 #logo ul a:hover { text-decoration: underline; }
 
