--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -114,6 +114,7 @@ table.highlight tr:hover td { background-color: #E1F0D9; }
 table tr.alt { background-color: #EEE; }
 table tr.new { background-color: #f6f8ff; }
 table.data em {font-weight:bolder; color:red;}
+table td.item { padding:5px 5px 2px 5px; }
 div.hint, div.hint a {font-size:0.9em; font-style:italic; color:#999;}
 div.hint { margin-bottom:10px;}
 input.long {width:400px; }
@@ -136,9 +137,10 @@ pre#nfo { font-family: "Courier New", "DejaVu Sans Mono", monospace; font-size: 
 #backdrop { position: absolute; width: 810px; height: 455px; left: -1px; top: 5px; background-color: #000; overflow: hidden;}
 #backdrop img { opacity:0.5; width: 100%; height: 100%;}
 
-div.resextra { padding-top:2px; color: #888; font-size: 0.8em; height:16px; }
-div.resextra a { color: #888; text-decoration:none; }
+div.resextra { padding-top:7px; color: #555; font-size: 0.8em; height:16px; }
+div.resextra a { color: #555; text-decoration:none; }
 div.movextra { padding-top:2px; color: #888; font-size: 0.8em; }
+div.resextra div.admin { float:right; }
 
 div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: #FED0D0 url(../images/icons/warning.png) no-repeat top; background-position: 5px 50%; font-size:1.2em; font-weight:bold; margin-bottom:10px;}
 div.comments { padding-top:20px; }
@@ -171,6 +173,11 @@ div.icon_check			{ background-image:url('../images/icons/check.png'); }
 
 div.nosearchresults {margin-left:25px; padding-top:50px;}
 div.nosearchresults ul { line-height: 150%;}
+
+
+.rndbtn { padding-left:4px; padding-right:4px; margin-right:1px; border:1px #CCC solid; background-color:#EEE; -moz-border-radius: 4px;  -webkit-border-radius: 4px;}
+table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { background-color: #fff; }
+
 
 
 
@@ -275,3 +282,6 @@ div.nosearchresults ul { line-height: 150%;}
         .cboxMovie .cboxSlideshow_on #cboxSlideshow.hover{background-position:-100px -25px;}
         .cboxMovie .cboxSlideshow_off #cboxSlideshow{background-position:-100px 0px; right:44px;}
         .cboxMovie .cboxSlideshow_off #cboxSlideshow.hover{background-position:-75px -25px;}
+
+
+
