plainify the browse action links on plain theme
git-svn-id: svn://svn.newznab.com/nn/trunk@1083 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -31,4 +31,6 @@ select#headcat {width:100px;}
 
 a:hover, #sidebar li li a:hover {color:#000;}
 
+.rndbtn { padding-left:0px; padding-right:1px; margin-right:0px; border:1px #FFF solid; background-color:#FFF; -moz-border-radius: 0px;  -webkit-border-radius: 0px;}
+table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { border:1px #EEE solid; background-color: #EEE; }
 
