hover styles on rounded buttons and plain theme
git-svn-id: svn://svn.newznab.com/nn/trunk@1086 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -178,6 +178,7 @@ div.nosearchresults ul { line-height: 150%;}
 
 .rndbtn { padding-left:4px; padding-right:4px; margin-right:1px; border:1px #CCC solid; background-color:#EEE; -moz-border-radius: 4px;  -webkit-border-radius: 4px;}
 table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { background-color: #fff; }
+table.highlight tr:hover .rndbtn:hover { background-color: #DDD; }
 
 
 
