--- a/www/views/themes/black/style.css
+++ b/www/views/themes/black/style.css
@@ -8,12 +8,11 @@ body { background: #000 url() repeat-x left top;}
 /* remove the w3 validator, change logo, and hide h1 text*/
 
 .w3validator, menupic {display:none;}
+
 #logo h1 { padding-top: 10px; font-size: 48px;}
 #logo h1 a { text-decoration: none; color: #485459;}
 #logo a { text-decoration: none; color: #A8A8A8; }
-#logo { background:url(images/logo.png)            
-        no-repeat top left;
-}
+#logo { background:url(images/logo.png) no-repeat top left; height:60px; }
 
 /* override table styles, alt rows, headings etc*/
 table tr.alt { background-color: #333; }
@@ -23,7 +22,7 @@ table.data th { background-color:#555; border-color: #777;}
 table.data td, table.data { border-color: #777;}
 
 /* backgrounds to input boxes need special case in this high contrast stylesheet*/
-select, textarea, input {background-color:#AAA; font-family:verdana;}
+span, select, textarea, input {font-family:verdana;}
 
 /* menu bar background colours*/
 #menulink a, #menulink :visited, #menulink li, #menu {background-color:#555;}
@@ -33,6 +32,12 @@ select, textarea, input {background-color:#AAA; font-family:verdana;}
 #sidebar li li a:hover, h3, h2, table.data, #statusbar, #statusbar a, div.comments , #menulink a, #menulink :visited, #menulink a , #sidebar h2, #sidebar li li a, li, #content h1, p, #menulink a.selected, #menulink a, #statusbar, #statusbar a, th, td, a {font-family:verdana; color:#88B541;}
 #sidebar li li:hover { background-color:#555;}
 
+div.resextra a {color:#88B541;}
+.rndbtn { color:#88B541; padding-left:4px; padding-right:4px; margin-right:1px; border:1px #444 solid; background-color:#333; -moz-border-radius: 4px;  -webkit-border-radius: 4px;}
+table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { background-color: #555; color:#9FC660;}
+table.highlight tr:hover .rndbtn:hover { background-color: #222; }
+
+div.pager a {background-color: #222;}
 
 pre#nfo { color: #fff; }
 
