up the size of the small fonts on calibri themes, as 0.8 doesnt resolve and makes the text look squashed.
git-svn-id: svn://svn.newznab.com/nn/trunk@1102 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -26,6 +26,8 @@ select { background: none; }
 #menulink a, #menulink :visited, #menulink li, #menu { background-color:#fff;}
 #menulink :hover { color: #fff; background-color: #333; }
 
+table.data td.less, div.resextra {font-size: 0.9em;}
+div.resextra a:hover {text-decoration:underline;}
 
 select#headcat {width:100px;}
 
