--- a/www/views/themes/nzbsu/style.css
+++ b/www/views/themes/nzbsu/style.css
@@ -18,7 +18,7 @@ table.data td, table.data { border-color: #ddd;}
 
 input[type=text], input[type=password], textarea, select { background: #fff; }
 
-
+table.data td.less, div.resextra {font-size: 0.9em;}
 
 /* menu bar background colours*/
 #menulink a, #menulink :visited, #menulink li, #menu {color:#fff;  background-color:#333;}
