style fix to fill browser on nzbsu and plain
git-svn-id: svn://svn.newznab.com/nn/trunk@1112 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -3,6 +3,12 @@ body { background:none; color: #333; }
 .footer, .w3validator, .menupic {display:none;}
 #logo { visibility:none; height:15px; background:none;}
 
+#page { width: 100%; padding: 50px 0px 0px 0px;}
+#content { float: right; width:85%; }
+#sidebar { float: left; width:15%; font-size: 12px;}
+
+#frame {padding-left:20px;padding-right:20px;}
+
 /* override table styles, alt rows, headings etc*/
 table tr.alt { background-color: #eee; }
 table tr.new { background-color: #fff; }
