--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -147,6 +147,8 @@ div.movextra { padding-top:5px; color: #888; font-size: 0.9em; }
 div.movcover { width:125px; }
 div.resextra div.admin { float:right; }
 
+ol.tracklist li { line-height: 140%; }
+
 div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: #FED0D0 url(../images/icons/warning.png) no-repeat top; background-position: 5px 50%; font-size:1.2em; font-weight:bold; margin-bottom:10px;}
 div.comments { padding-top:20px; }
 
