--- a/www/views/themes/plain/style.css
+++ b/www/views/themes/plain/style.css
@@ -34,6 +34,8 @@ select#headcat {width:100px;}
 a:hover, #sidebar li li a:hover {color:#000;}
 
 .rndbtn { padding-left:0px; padding-right:1px; margin-right:0px; border:1px #FFF solid; background-color:#FFF; -moz-border-radius: 0px;  -webkit-border-radius: 0px;}
+#menu { padding-left:0px; padding-right:1px; margin-right:0px; border:0px ; background-color:#FFF; -moz-border-radius: 0px;  -webkit-border-radius: 0px;}
+
 table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { border:1px #EEE solid; background-color: #EEE; }
 table.highlight tr:hover .rndbtn:hover { background-color: #EEE; }
 
