--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -60,7 +60,7 @@ page structure
 #sidebar a { text-align: left; text-decoration: none; font-weight: bold;}
 
 .footer { width: 100%; height: 102px; margin: 0 auto; background: #E1E1E1; border-top: 5px solid #656565;}
-.footer p { margin: 0; padding: 20px 0px 0px 0px; text-align: center; line-height: normal; font-size: 10px; }
+.footer p { margin: 0; padding: 20px 0px 0px 0px; text-align: center; line-height: normal; font-size: 0.9em; }
 .footer a {}
 
 
