--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -143,6 +143,14 @@ pre#nfo { font-family: "Courier New", "DejaVu Sans Mono", monospace; font-size: 
 #backdrop { position: absolute; width: 810px; height: 455px; left: -1px; top: 5px; background-color: #000; overflow: hidden;}
 #backdrop img { opacity:0.5; width: 100%; height: 100%;}
 
+
+#musicinfo { color:#FFF; background-color:#7F7F7F; background-image:url('../../covers/music/backdrop.jpg'); background-repeat: repeat-x;}
+#musicinfo h1 { font-size: 32px; padding: 10px 10px 0px 20px; color: #fff; }
+#musicinfo h2, #musicinfo h3, #musicinfo p { padding: 10px 20px 0px 20px; color: #fff;}
+#musicinfo a { color: #fff; }
+#musicinfo img.cover { float:right; margin-top: 20px; margin-left: 20px; padding-right: 20px;}
+#musicinfo p {text-align: left; line-height: 180%;}
+
 div.resextra { padding-top:7px; color: #555; font-size: 0.9em; height:16px; }
 div.resextra a { color: #555; text-decoration:none; }
 div.movextra { padding-top:5px; color: #888; font-size: 0.9em; }
