--- a/www/views/themes/nzbsorg/style.css
+++ b/www/views/themes/nzbsorg/style.css
@@ -13,7 +13,7 @@ table.data th { background-color:#CCC; border-color: #ddd;}
 table.data td, table.data { border-color: #ddd;}
 
 /* override almost every element in the sites font and color*/
-#sidebar li, h3, h2, table.data, #statusbar, #statusbar a, div.comments , #menulink a, #menulink :visited, #menulink a , #sidebar h2, #sidebar li li a, li, #content h1, p, #menulink a.selected, #menulink a, #statusbar, #statusbar a, th, td, a, select, textarea, input {font-family:Calibri, courier, monospace; color:#444;}
+#sidebar li, h3, h2, table.data, #statusbar, #statusbar a, div.comments , #menulink a, #menulink :visited, #menulink a , #sidebar h2, #sidebar li li a, li, #content h1, p, #menulink a.selected, #menulink a, #statusbar, #statusbar a, th, td, a, select, textarea, input {font-family:'Trebuchet MS', 'Lucida Grande', Arial, Helvetica, sans-serif; color:#444;}
 #sidebar li li, #sidebar li li:hover { background:none;}
 #sidebar li li a {padding: 0 0 0 0;}
 #sidebar a:hover { text-decoration: underline;}
