--- a/www/views/themes/nzbsdark/style.css
+++ b/www/views/themes/nzbsdark/style.css
@@ -13,7 +13,7 @@ table tr { background-color: #111; }
 table tr.alt { background-color: #333; }
 table tr.new { background-color: #3f3f3f; border-bottom: 1px solid #111; }
 table tr.selected { background-color: green; border-bottom: 1px solid #111; }
-table.highlight tr:hover td { background-color: #3F3F3F; }
+table.highlight tr:hover td { background-color: green; }
 table.data th { background-color:#555; }
 table.data th, table.data td, table.data { border-width: 0px; }
 
@@ -27,7 +27,7 @@ table.data th, table.data td, table.data { border-width: 0px; }
 #sidebar li li a {padding: 0 0 0 0;}
 #sidebar a:hover { text-decoration: underline;}
 
-.rndbtn { padding-left:4px; padding-right:4px; margin-right:1px; border:2px #666 solid; background-color:#111; -moz-border-radius: 4px;  -webkit-border-radius: 4px;}
+.rndbtn { padding-left:4px; padding-right:4px; padding-top: 1px; padding-bottom: 1px; margin-right:1px; border:1px #666 solid; background-color:#111; -moz-border-radius: 5px;  -webkit-border-radius: 5px;}
 table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { background-color: #111; }
 table.highlight tr:hover .rndbtn:hover { background-color: #111; }
 .rndbtn, a.rndbtn {font-size: 0.8em; background-color: #333; color: #ccc; }
@@ -72,5 +72,34 @@ div.resextra a { color: #ccc; text-decoration:none; }
 div.movextra { color: #ccc; }
 
 pre#nfo { color: #fff; }
-#cboxOverlay{background:#999;}
-#cboxLoadedContent{ background:#333; }
+#cboxOverlay{background:#333;}
+
+#colorbox{}
+    #cboxTopLeft{width:25px; height:25px; background:url(../../images/colorbox/border1-dark.png) 0 0 no-repeat;}
+    #cboxTopCenter{height:25px; background:url(../../images/colorbox/border1-dark.png) 0 -50px repeat-x;}
+    #cboxTopRight{width:25px; height:25px; background:url(../../images/colorbox/border1-dark.png) -25px 0 no-repeat;}
+    #cboxBottomLeft{width:25px; height:25px; background:url(../../images/colorbox/border1-dark.png) 0 -25px no-repeat;}
+    #cboxBottomCenter{height:25px; background:url(../../images/colorbox/border1-dark.png) 0 -75px repeat-x;}
+    #cboxBottomRight{width:25px; height:25px; background:url(../../images/colorbox/border1-dark.png) -25px -25px no-repeat;}
+    #cboxMiddleLeft{width:25px; background:url(../../images/colorbox/border2-dark.png) 0 0 repeat-y;}
+    #cboxMiddleRight{width:25px; background:url(../../images/colorbox/border2-dark.png) -25px 0 repeat-y;}
+    #cboxContent{background:#333;}
+    	#cboxLoadedContent{ background:#333; }
+    	#cboxLoadingOverlay{background:#fff;}
+        #cboxTitle{position:absolute; font-size:125%; top:-2px; left:0; color:#eee; }
+        #cboxSlideshow, #cboxPrevious, #cboxNext, #cboxClose{text-indent:-9999px; width:20px; height:20px; position:absolute; top:-1px; background:url(../../images/colorbox/controls-dark.png) 0 0 no-repeat;}
+        #cboxPrevious{background-position:0px 0px; right:44px;}
+        #cboxPrevious.hover{background-position:0px -25px;}
+        #cboxNext{background-position:-25px 0px; right:22px;}
+        #cboxNext.hover{background-position:-25px -25px;}
+        #cboxClose{background-position:-50px 0px; right:0;}
+        #cboxClose.hover{background-position:-50px -25px;}
+        
+.cboxMovie #cboxLoadedContent{margin-top: 5px; background:#111; padding:1px;}
+.cboxMovie #cboxSlideshow, .cboxMovie #cboxPrevious, .cboxMovie #cboxNext, .cboxMovie #cboxClose{text-indent:-9999px; width:20px; height:20px; position:absolute; top:-20px; background:url(../../images/colorbox/controls-dark.png) 0 0 no-repeat;}
+.cboxMovie #cboxPrevious{background-position:0px 0px; right:44px;}
+.cboxMovie #cboxPrevious.hover{background-position:0px -25px;}
+.cboxMovie #cboxNext{background-position:-25px 0px; right:22px;}
+.cboxMovie #cboxNext.hover{background-position:-25px -25px;}
+.cboxMovie #cboxClose{background-position:-50px 0px; right:0;}
+.cboxMovie #cboxClose.hover{background-position:-50px -25px;}
