fix increase post title font size
git-svn-id: svn://svn.newznab.com/nn/trunk@1231 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -133,7 +133,7 @@ input.date { width:70px; }
 .right { text-align:right !important;}
 .mid { text-align:center !important;}
 
-a.title { font-size: 1.4em; }
+#forum a.title { font-size: 1.4em; }
 
 
 pre#nfo { font-family: "Courier New", "DejaVu Sans Mono", monospace; font-size: 12px; line-height: 13px; }
