--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -158,6 +158,8 @@ div.resextra { padding-top:7px; color: #555; font-size: 0.9em; height:16px; }
 div.resextra a { color: #555; text-decoration:none; }
 div.movextra { padding-top:5px; color: #888; font-size: 0.9em; }
 div.movcover { width:140px; }
+div.movcover img { margin-bottom:5px; padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #777; -webkit-box-shadow: 3px 6px 8px -4px #777; box-shadow: 3px 6px 8px -4px #777; }
+
 div.resextra div.admin { float:right; }
 
 ol.tracklist li { line-height: 140%; }
