--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -32,9 +32,12 @@ page structure
 #logo h1, #logo p { display:none; margin: 0px; line-height: normal; text-transform: lowercase; font-weight: normal; color: #485459;}
 #logo p { margin-top: 2px; text-transform: lowercase; font-size: 13px; color: #A8A8A8;}
 #logo h1 { padding-top: 10px; font-size: 48px;}
-#logo a { text-decoration: none; color: #A8A8A8; }
+#logo a { text-decoration: none; color: #A8A8A8;}
+#logo .logolink {float:left;}
 #logo img { margxin-top:15px; }
 #logo h1 a { text-decoration: none; color: #485459;}
+
+
 
 #statusbar { width:940px; margin: 0 auto; text-align:right; padding-right:10px; padding-top:5px;}
 #statusbar a { text-decoration: none; color: #515151;}
@@ -161,6 +164,7 @@ div.movcover { width:140px; }
 div.movcover img { margin-bottom:5px; padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #777; -webkit-box-shadow: 3px 6px 8px -4px #777; box-shadow: 3px 6px 8px -4px #777; }
 
 div.resextra div.admin { float:right; }
+div.resextra div.btns {float:left; }
 
 ol.tracklist li { line-height: 140%; }
 
